Added delay on buttons for better media icon view

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     </h4>
 
     <div class="buttons-container">
-      <a href="#benefits">
+      <a href="javascript:setTimeout(()=>{window.location='#benefits'},500);">
         <button>
           Benefits
           <div class="icon-1">
@@ -634,7 +634,7 @@
           </div>
         </button>
       </a>
-      <a href="#types">
+      <a href="javascript:setTimeout(()=>{window.location='#types'},500);">
         <button>
           Types
           <div class="icon-1">
@@ -764,7 +764,7 @@
           </div>
         </button>
       </a>
-      <a href="#campaign">
+      <a href="javascript:setTimeout(()=>{window.location='#campaign'},500);">
         <button>
           Campaign
           <div class="icon-1">
@@ -895,6 +895,7 @@
         </button>
       </a>
     </div>
+
     <div class="title-banner" id="benefits">
       <a name="benefits"></a>
       <h1>Benefits of Urban Gardening</h1>
@@ -1366,7 +1367,9 @@
               title="PO code logo"
             />
             and is
-            <a href="#" target="_blank"
+            <a
+              href="https://github.com/PatrycjaOosthuizen/urban-garden-challenge"
+              target="_blank"
               >open sourced on <i class="github-icon fa-brands fa-github"></i
             ></a>
           </p>
