Worked on responsive footer

--- a/index.html
+++ b/index.html
@@ -364,7 +364,6 @@
       }
       .back {
         margin-left: 85px;
-        margin-bottom: 20px;
       }
       footer {
         color: white;
@@ -487,7 +486,10 @@
           grid-gap: 12px;
         }
         .back {
-          margin-left: 110px;
+          margin-left: 123px;
+        }
+        footer {
+          padding: 30px 8px;
         }
       }
     </style>
@@ -1079,7 +1081,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <a href="#top" class="back">Back to top </a>
+      <a href="#top" class="back mb-5">Back to top </a>
     </div>
 
     <div class="title-banner">
@@ -1280,7 +1282,7 @@
       </div>
       <a href="#top" class="back">Back to top </a>
     </div>
-    <footer>
+    <footer class="mt-5">
       <section class="grid grid-3-columns">
         <div>
           <h5>More about Urban Gardens</h5>
@@ -1328,6 +1330,13 @@
                 alt="YouTube Urban Gardening"
                 title="TouTube Urban Gardening"
                 ><i class="social-media-icon fa-brands fa-youtube"></i
+              ></a>
+              <a
+                href="httphttps://www.tiktok.com/@spicymoustache?_t=8lU9b8mObR3&_r=1"
+                target="_blank"
+                alt="tiktok spicymoustache"
+                title="tiktok spicymoustache"
+                ><i class="social-media-icon fa-brands fa-tiktok"></i
               ></a>
             </li>
           </ul>
