--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
           text-align: center;
           margin: 0px 15px;
         }
+
         .buttons-container {
           display: flex;
           justify-content: center;
@@ -452,7 +453,7 @@
         }
 
         header h1 {
-          font-size: 28px;
+          font-size: 34px;
         }
         h1 {
           font-size: 20px;
@@ -1332,7 +1333,7 @@
                 ><i class="social-media-icon fa-brands fa-youtube"></i
               ></a>
               <a
-                href="httphttps://www.tiktok.com/@spicymoustache?_t=8lU9b8mObR3&_r=1"
+                href="https://www.tiktok.com/@spicymoustache?_t=8lU9b8mObR3&_r=1"
                 target="_blank"
                 alt="tiktok spicymoustache"
                 title="tiktok spicymoustache"
