Added icons to footer

--- a/index.html
+++ b/index.html
@@ -490,7 +490,10 @@
           margin-left: 123px;
         }
         footer {
-          padding: 30px 8px;
+          padding: 30px 6px;
+        }
+        footer a {
+          font-size: 14px;
         }
       }
     </style>
@@ -1292,21 +1295,27 @@
               <a
                 href="https://www.rhs.org.uk/garden-inspiration/garden-types/urban-garden"
                 target="_blank"
-                >Make The Most of Your Urban Garden</a
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Make The
+                Most of Your Urban Garden</a
               >
             </li>
             <li>
               <a
                 href="https://help.gardeningexpress.co.uk/knowledge-base/urban-gardening-a-beginners-guide/"
                 target="_blank"
-                >Urban Gardening: A Beginners Guide</a
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Urban
+                Gardening: A Beginners Guide</a
               >
             </li>
             <li>
               <a
                 href="https://www.thompson-morgan.com/top-10-trendy-plants-for-urban-gardens"
                 target="_blank"
-                >Top 10 Trendy Plants for Urban Gardens</a
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Top 10
+                Trendy Plants for Urban Gardens</a
               >
             </li>
             <br />
@@ -1350,6 +1359,7 @@
               href="https://www.shecodes.io/contests/urban-garden-challenge"
               target="_blank"
             >
+              <i class="fa-solid fa-arrow-up-right-from-square"></i> Urban
               Garden Challenge from SheCodes</a
             >
             to practise my coding skills.
@@ -1363,7 +1373,8 @@
               href="https://www.shecodes.io/contests/urban-garden-challenge"
               target="_blank"
             >
-              Garden Challenge from SheCodes</a
+              <i class="fa-solid fa-arrow-up-right-from-square"></i> Garden
+              Challenge from SheCodes</a
             >
             to practise my coding skills.
           </p>
@@ -1380,7 +1391,9 @@
             <a
               href="https://github.com/PatrycjaOosthuizen/urban-garden-challenge"
               target="_blank"
-              >open sourced on <i class="github-icon fa-brands fa-github"></i
+            >
+              <i class="fa-solid fa-arrow-up-right-from-square"></i> open
+              sourced on <i class="github-icon fa-brands fa-github"></i
             ></a>
           </p>
         </div>
