exchange local links to challenge requirements

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             rgba(0, 0, 0, 0.4),
             rgba(0, 0, 0, 0.4)
           ),
-          url("hero.jpeg");
+          url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/038/original/hero.jpeg?1714536725);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -371,7 +371,7 @@
             rgba(0, 0, 0, 0.6),
             rgba(0, 0, 0, 0.6)
           ),
-          url("hero.jpeg");
+          url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/038/original/hero.jpeg?1714536725);
         background-repeat: no-repeat;
         background-size: cover;
         padding: 40px;
@@ -911,7 +911,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="physical-well-being.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/039/original/physical-well-being.JPG?1714536952"
               class="card-img-top"
               alt="Physical well-being drawing"
               title="Physical well-being drawing"
@@ -930,7 +930,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="mental-well-being.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/040/original/mental-well-being.jpg?1714537027"
               class="card-img-top"
               alt="Mental well-being drawing"
               title="Mental well-being drawing"
@@ -949,7 +949,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="connection-with-nature.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/041/original/connection-with-nature.jpg?1714537069"
               class="card-img-top"
               alt="connection with nature"
               title="connection with nature"
@@ -968,7 +968,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="stress-reduction.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/042/original/stress-reduction.jpg?1714537117"
               class="card-img-top"
               alt="Stress reduction"
               title="Stress reduction"
@@ -986,7 +986,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="accomplishment.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/043/original/accomplishment.jpg?1714537157"
               class="card-img-top"
               alt="Sense of accomplishment"
               title="Sense of accomplishment"
@@ -1005,7 +1005,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="engagement.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/044/original/engagement.jpg?1714537189"
               class="card-img-top"
               alt="Social engagement"
               title="Social engagement"
@@ -1024,7 +1024,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="enviroment.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/045/original/enviroment.JPG?1714537229"
               class="card-img-top mb-2"
               alt="Environmental benefits"
               title="Environmental benefits"
@@ -1043,7 +1043,7 @@
         <div class="col-lg-3 mb-3">
           <div class="card h-100 container-card" style="width: 20rem">
             <img
-              src="eductaion.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/046/original/eductaion.JPG?1714537256"
               class="card-img-top mb-3"
               alt="Educational purposes"
               title="Educational purposes"
@@ -1103,7 +1103,7 @@
               </p>
             </div>
             <img
-              src="community-gardens.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/047/original/community-gardens.jpg?1714537308"
               class="card-img-bottom"
               alt="Community gardens"
               title="Community gardens"
@@ -1120,7 +1120,7 @@
               </p>
             </div>
             <img
-              src="indoor-gardening.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/048/original/indoor-gardening.JPG?1714537353"
               class="card-img-bottom"
               alt="Indoor gardening"
               title="Indoor gardening"
@@ -1139,7 +1139,7 @@
               </p>
             </div>
             <img
-              src="container.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/049/original/container.JPG?1714537397"
               class="card-img-bottom"
               alt="Container gardening"
               title="Container gardening "
@@ -1158,7 +1158,7 @@
               </p>
             </div>
             <img
-              src="raised-bed.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/050/original/raised-bed.jpg?1714537426"
               class="card-img-bottom"
               alt="Raised bed gardening"
               title="Raised bed gardening"
@@ -1177,7 +1177,7 @@
               </p>
             </div>
             <img
-              src="vertical.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/051/original/vertical.jpg?1714537460"
               class="card-img-bottom"
               alt=" Vertical gardening"
               title=" Vertical gardening"
@@ -1194,7 +1194,7 @@
               </p>
             </div>
             <img
-              src="windowsill.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/052/original/windowsill.jpg?1714537490"
               class="card-img-bottom"
               alt="Windowsill garden"
               title="Windowsill garden"
@@ -1211,7 +1211,7 @@
               </p>
             </div>
             <img
-              src="roof-garden.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/053/original/roof-garden.JPG?1714537516"
               class="card-img-bottom"
               alt="Roof garden"
               title="Roof garden"
@@ -1230,7 +1230,7 @@
               </p>
             </div>
             <img
-              src="hydraponic.JPG"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/054/original/hydraponic.JPG?1714537541"
               class="card-img-bottom"
               alt="Hydroponic gardening"
               title="Hydroponic gardening"
@@ -1250,7 +1250,7 @@
         <div class="col-lg-6">
           <img
             class="img-fluid"
-            src="campaign.JPG"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/055/original/campaign.JPG?1714537578"
             alt="timberland-campaign"
             title="timberland-campaign"
           />
@@ -1381,12 +1381,16 @@
           <br />
           <p>
             © 2024 This project was coded by
-            <img
-              class="po-code-logo"
-              src="logo-transparent-white.png"
-              alt="PO code logo"
-              title="PO code logo"
-            />
+            <a
+              href="https://github.com/PatrycjaOosthuizen/urban-garden-challenge"
+              target="_blank"
+            >
+              <img
+                class="po-code-logo"
+                src="logo-transparent-white.png"
+                alt="PO code logo"
+                title="PO code logo"
+            /></a>
             and is
             <a
               href="https://github.com/PatrycjaOosthuizen/urban-garden-challenge"
