logo local link exchanged to meet requirements

--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@
             >
               <img
                 class="po-code-logo"
-                src="logo-transparent-white.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/125/060/original/logo-transparent-white.png?1714538551"
                 alt="PO code logo"
                 title="PO code logo"
             /></a>
