Optimised SEO and improved responsive layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Urban Garden Challenge - Connect to Nature with Urban Garden"
+    />
+    <meta
+      name="keywords"
+      content="Urban Garden, Gardening, Nature, Health, Environment"
+    />
     <title>Urban Garden Challenge</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -494,6 +502,123 @@
         }
         footer a {
           font-size: 14px;
+        }
+        html {
+          scroll-behavior: smooth;
+        }
+      }
+      @media (max-width: 768px) {
+        .hero {
+          padding: 50px;
+        }
+        header h1 {
+          font-size: 28px;
+        }
+        h1 {
+          font-size: 24px;
+        }
+        h4 {
+          font-size: 16px;
+          padding: 10px;
+        }
+        .title-banner {
+          padding: 20px;
+        }
+        .types-garden-heading {
+          font-size: 20px;
+        }
+        .embed {
+          width: 100%;
+          padding-bottom: 30px;
+        }
+        .buttons-container {
+          flex-direction: column;
+          padding: 50px 20px;
+        }
+        button {
+          padding: 15px 30px;
+          font-size: 14px;
+          margin: 10px 0;
+        }
+        .container-card {
+          width: 100%;
+        }
+        .grid {
+          grid-template-columns: 1fr;
+          grid-gap: 20px;
+        }
+        .back {
+          margin-left: 0;
+          text-align: center;
+        }
+        footer {
+          padding: 20px;
+        }
+        footer a {
+          font-size: 12px;
+        }
+        .social-media-icon {
+          font-size: 24px;
+        }
+        .github-icon {
+          font-size: 24px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .hero {
+          padding: 30px;
+        }
+        header h1 {
+          font-size: 24px;
+        }
+        h1 {
+          font-size: 18px;
+        }
+        h4 {
+          font-size: 14px;
+          padding: 5px;
+        }
+        .title-banner {
+          padding: 10px;
+        }
+        .types-garden-heading {
+          font-size: 18px;
+        }
+        .embed {
+          width: 100%;
+          padding-bottom: 20px;
+        }
+        .buttons-container {
+          padding: 30px 10px;
+        }
+        button {
+          padding: 10px 20px;
+          font-size: 12px;
+          margin: 5px 0;
+        }
+        .container-card {
+          width: 100%;
+        }
+        .grid {
+          grid-template-columns: 1fr;
+          grid-gap: 10px;
+        }
+        .back {
+          margin-left: 0;
+          text-align: center;
+        }
+        footer {
+          padding: 10px;
+        }
+        footer a {
+          font-size: 10px;
+        }
+        .social-media-icon {
+          font-size: 20px;
+        }
+        .github-icon {
+          font-size: 20px;
         }
       }
     </style>
@@ -1085,7 +1210,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <a href="#top" class="back mb-5">Back to top </a>
+      <a href="#top" class="back mb-5" tabindex="0">Back to top </a>
     </div>
 
     <div class="title-banner">
@@ -1238,7 +1363,7 @@
           </div>
         </div>
       </div>
-      <a href="#top" class="back">Back to top </a>
+      <a href="#top" class="back mb-5" tabindex="0">Back to top </a>
     </div>
 
     <div class="title-banner">
@@ -1284,7 +1409,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <a href="#top" class="back">Back to top </a>
+      <a href="#top" class="back mb-5" tabindex="0">Back to top </a>
     </div>
     <footer class="mt-5">
       <section class="grid grid-3-columns">
